# marge-bot

./: .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  constraints.txt  default.nix  deploy.yml  dockerize.nix  marge.app  marge.nix  pinnedNixpkgs.nix  pinnedNixpkgs.src.json  pylintrc  pyproject.toml  requirements.nix  requirements.txt  requirements_development.txt  requirements_frozen.txt  requirements_override.nix  requirements_plus_development_frozen.txt  setup.cfg  setup.py  shell.nix
.github/workflows/: deploy.yml  test.yml
marge/: __init__.py  __main__.py  app.py  approvals.py  batch_job.py  bot.py  branch.py  commit.py  git.py  gitlab.py  interval.py  job.py  merge_request.py  pipeline.py  project.py  single_merge_job.py  store.py  trailerfilter.py  user.py
nix/: dockerize.nix  marge-bot-image.nix  marge-bot.nix  marge-image.nix  marge.nix  requirements.nix  sources.json  sources.nix
tests/: __init__.py  git_repo_mock.py  gitlab_api_mock.py  repo_mock.py  test_app.py  test_approvals.py  test_batch_job.py  test_bot.py  test_commit.py  test_git.py  test_gitlab.py  test_interval.py  test_job.py  test_merge_request.py  test_pipeline.py  test_project.py  test_single_job.py  test_store.py  test_user.py
