[tool.poetry]
name = "marge"
version = "0.10.0"
description = "Marge-bot is a merge-bot for GitLab that, beside other goodies, implements [the Not Rocket Science Rule Of Software Engineering](http://graydon2.dreamwidth.org/1597.html)."
license = "BSD-3-Clause"
authors = ["Infrastructure <infrastructure@smarkets.com>"]
readme = "README.md"
repository = "https://github.com/smarkets/marge-bot"
keywords = ["merge request", "gitlab"]

[tool.poetry.dependencies]
python = "^3.6"
ConfigArgParse = "^1.3"
maya = "^0.6.1"
PyYAML = "^5.4.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-pylint = "^0.18.0"
pytest-runner = "^5.3.0"

[tool.poetry.scripts]
marge = "marge.__main__:run"
"marge.app" = "marge.__main__:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
